@@ -43,6 +43,7 @@ import java.nio.charset.Charset;
 import java.security.CodeSource;
 import java.security.ProtectionDomain;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.Enumeration;
 import java.util.Iterator;
 import java.util.LinkedList;
@@ -57,6 +58,7 @@ import java.util.zip.ZipInputStream;
 
 import javax.servlet.ServletContext;
 
+import org.apache.felix.framework.BundleWiringImpl.BundleClassLoader;
 import org.osgi.framework.Bundle;
 import org.osgi.framework.BundleReference;
 
@@ -64,6 +66,7 @@ import com.jezhumble.javasysmon.CpuTimes;
 import com.jezhumble.javasysmon.JavaSysMon;
 import com.jezhumble.javasysmon.MemoryStats;
 
+import lucee.commons.collection.AccessOrderLimitedSizeMap;
 import lucee.commons.digest.MD5;
 import lucee.commons.io.log.Log;
 import lucee.commons.io.res.Resource;
@@ -82,6 +85,7 @@ import lucee.commons.lang.types.RefInteger;
 import lucee.commons.lang.types.RefIntegerImpl;
 import lucee.loader.TP;
 import lucee.loader.engine.CFMLEngineFactory;
+import lucee.loader.util.Util;
 import lucee.runtime.PageContext;
 import lucee.runtime.PageContextImpl;
 import lucee.runtime.PageSource;
@@ -99,7 +103,7 @@ import lucee.runtime.functions.system.ExpandPath;
 import lucee.runtime.net.http.ReqRspUtil;
 import lucee.runtime.op.Castable;
 import lucee.runtime.op.Caster;
-import lucee.runtime.op.Operator;
+import lucee.runtime.op.OpUtil;
 import lucee.runtime.op.date.DateCaster;
 import lucee.runtime.osgi.OSGiUtil;
 import lucee.runtime.type.Array;
@@ -129,8 +133,9 @@ public final class SystemUtil {
 
 	public static final String SETTING_CONTROLLER_DISABLED = "lucee.controller.disabled";
 	public static final String SETTING_UPLOAD_EXT_BLACKLIST = "lucee.upload.blacklist";
+	public static final String SETTING_UPLOAD_EXT_BLOCKLIST = "lucee.upload.blocklist";
 
-	public static final String DEFAULT_UPLOAD_EXT_BLACKLIST = "asp,aspx,cfc,cfm,cfml,do,htm,html,jsp,jspx,php";
+	public static final String DEFAULT_UPLOAD_EXT_BLOCKLIST = "asp,aspx,cfc,cfm,cfml,do,htm,html,jsp,jspx,php";
 
 	public static final char CHAR_DOLLAR = (char) 36;
 	public static final char CHAR_POUND = (char) 163;
@@ -218,6 +223,7 @@ public final class SystemUtil {
 		else JAVA_VERSION = 0;
 	}
 
+	private static final Map<String, String> tokens = Collections.synchronizedMap(new AccessOrderLimitedSizeMap<String, String>(10000, 100));
 	private static ClassLoader loaderCL;
 	private static ClassLoader coreCL;
 
@@ -438,7 +444,8 @@ public final class SystemUtil {
 		try {
 			return frp.getResource(".").getCanonicalResource();
 		}
-		catch (IOException e) {}
+		catch (IOException e) {
+		}
 		URL url = InfoImpl.class.getClassLoader().getResource(".");
 		try {
 			return frp.getResource(FileUtil.URLToFile(url).getAbsolutePath());
@@ -534,6 +541,20 @@ public final class SystemUtil {
 	}
 
 	/**
+	 * return the memory percentage
+	 * 
+	 * @return value from 0 to 1
+	 */
+	public static float getMemoryPercentage() {
+		Runtime r = Runtime.getRuntime();
+		long max = r.maxMemory();
+		if (max == Long.MAX_VALUE || max < 0) return -1;
+
+		long used = r.totalMemory() - r.freeMemory();
+		return (1F / max * used);
+	}
+
+	/**
 	 * replace path placeholder with the real path, placeholders are
 	 * [{temp-directory},{system-directory},{home-directory}]
 	 * 
@@ -563,7 +584,8 @@ public final class SystemUtil {
 			try {
 				return StringUtil.replace(file.getCanonicalPath(), dir.getCanonicalPath(), placeholder, true);
 			}
-			catch (IOException e) {}
+			catch (IOException e) {
+			}
 		}
 		return null;
 	}
@@ -634,7 +656,8 @@ public final class SystemUtil {
 		try {
 			id = MD5.getDigestAsString(ReqRspUtil.getRootPath(sc));
 		}
-		catch (IOException e) {}
+		catch (IOException e) {
+		}
 		return id;
 	}
 
@@ -662,35 +685,40 @@ public final class SystemUtil {
 		try {
 			Thread.sleep(time);
 		}
-		catch (InterruptedException e) {}
+		catch (InterruptedException e) {
+		}
 	}
 
 	public static void sleep(long time) {
 		try {
 			Thread.sleep(time);
 		}
-		catch (InterruptedException e) {}
+		catch (InterruptedException e) {
+		}
 	}
 
 	public static void join(Thread t) {
 		try {
 			t.join();
 		}
-		catch (InterruptedException e) {}
+		catch (InterruptedException e) {
+		}
 	}
 
 	public static void resumeEL(Thread t) {
 		try {
 			t.resume();
 		}
-		catch (Exception e) {}
+		catch (Exception e) {
+		}
 	}
 
 	public static void suspendEL(Thread t) {
 		try {
 			t.suspend();
 		}
-		catch (Exception e) {}
+		catch (Exception e) {
+		}
 	}
 
 	/**
@@ -706,7 +734,8 @@ public final class SystemUtil {
 				lock.wait(timeout);
 			}
 		}
-		catch (InterruptedException e) {}
+		catch (InterruptedException e) {
+		}
 	}
 
 	public static void wait(Object lock, int timeout) {
@@ -715,7 +744,8 @@ public final class SystemUtil {
 				lock.wait(timeout);
 			}
 		}
-		catch (InterruptedException e) {}
+		catch (InterruptedException e) {
+		}
 	}
 
 	/**
@@ -730,7 +760,8 @@ public final class SystemUtil {
 				lock.wait();
 			}
 		}
-		catch (InterruptedException e) {}
+		catch (InterruptedException e) {
+		}
 	}
 
 	/**
@@ -917,6 +948,7 @@ public final class SystemUtil {
 			bean = it.next();
 			usage = bean.getUsage();
 			_type = bean.getType();
+
 			if ((type == MEMORY_TYPE_HEAP && _type == MemoryType.HEAP) || (type == MEMORY_TYPE_NON_HEAP && _type == MemoryType.NON_HEAP)) {
 				used += usage.getUsed();
 				max += usage.getMax();
@@ -927,7 +959,7 @@ public final class SystemUtil {
 		sct.setEL(KeyConstants._used, Caster.toDouble(used));
 		sct.setEL(KeyConstants._max, Caster.toDouble(max));
 		sct.setEL(KeyConstants._init, Caster.toDouble(init));
-		sct.setEL(KeyImpl.init("available"), Caster.toDouble(max - used));
+		sct.setEL(KeyConstants._available, Caster.toDouble(max - used));
 		return sct;
 	}
 
@@ -978,8 +1010,8 @@ public final class SystemUtil {
 	}
 
 	public static TemplateLine getCurrentContext(PageContext pc) {
-		StackTraceElement[] traces = new Exception().getStackTrace();
-
+		// StackTraceElement[] traces = new Exception().getStackTrace();
+		StackTraceElement[] traces = Thread.currentThread().getStackTrace();
 		int line = 0;
 		String template;
 
@@ -993,7 +1025,8 @@ public final class SystemUtil {
 				pc = ThreadLocalPageContext.get(pc);
 				if (pc != null) template = ExpandPath.call(pc, template);
 			}
-			catch (PageException e) {} // optional step, so in case it fails we are still fine
+			catch (PageException e) {
+			} // optional step, so in case it fails we are still fine
 
 			return new TemplateLine(template, line);
 		}
@@ -1024,6 +1057,12 @@ public final class SystemUtil {
 			return template + ":" + line;
 		}
 
+		public StringBuilder toString(StringBuilder sb) {
+			if (line < 1) sb.append(template);
+			else sb.append(template).append(':').append(line);
+			return sb;
+		}
+
 		public String toString(PageContext pc, boolean contract) {
 			if (line < 1) return contract ? ContractPath.call(pc, template) : template;
 			return (contract ? ContractPath.call(pc, template) : template) + ":" + line;
@@ -1032,7 +1071,7 @@ public final class SystemUtil {
 		public Object toStruct() {
 			Struct caller = new StructImpl(Struct.TYPE_LINKED);
 			caller.setEL(KeyConstants._template, template);
-			caller.setEL(KeyConstants._line, new Double(line));
+			caller.setEL(KeyConstants._line, Double.valueOf(line));
 			return caller;
 		}
 	}
@@ -1054,6 +1093,22 @@ public final class SystemUtil {
 		sleep(time);
 
 		return jsm.cpuTimes().getCpuUsage(previous) * 100D;
+	}
+
+	public static float getCpuPercentage() {
+		if (jsm == null) jsm = new JavaSysMon();
+		CpuTimes cput = jsm.cpuTimes();
+		if (cput == null) return -1;
+		CpuTimes previous = new CpuTimes(cput.getUserMillis(), cput.getSystemMillis(), cput.getIdleMillis());
+		int max = 50;
+		float res = 0;
+		while (true) {
+			if (--max == 0) break;
+			sleep(100);
+			res = jsm.cpuTimes().getCpuUsage(previous);
+			if (res != 1) break;
+		}
+		return res;
 	}
 
 	private synchronized static MemoryStats physical() throws ApplicationException {
@@ -1269,12 +1324,14 @@ public final class SystemUtil {
 	}
 
 	public static void stop(PageContext pc, Thread thread) {
-		if (thread == null || !thread.isAlive()) return;
+		// if (thread == null || !thread.isAlive() || thread == Thread.currentThread() ||
+		// ThreadUtil.isInNativeMethod(thread, false)) return;
+		if (thread == null || !thread.isAlive() || thread == Thread.currentThread()) return;
 		Log log = null;
 		// in case it is the request thread
 		if (pc instanceof PageContextImpl && thread == pc.getThread()) {
 			((PageContextImpl) pc).setTimeoutStackTrace();
-			log = ((PageContextImpl) pc).getLog("requesttimeout");
+			log = ThreadLocalPageContext.getLog(pc, "requesttimeout");
 		}
 
 		// first we try to interupt, the we force a stop
@@ -1290,8 +1347,10 @@ public final class SystemUtil {
 				else thread.stop();
 			}
 			else {
-				if (log != null) log.error("thread",
-						"do not " + (force ? "stop" : "interrupt") + " thread because thread is not within Lucee code" + "\n" + ExceptionUtil.toString(thread.getStackTrace()));
+				if (log != null) {
+					log.log(Log.LEVEL_INFO, "thread", "do not " + (force ? "stop" : "interrupt") + " thread because thread is not within Lucee code",
+							ExceptionUtil.toThrowable(thread.getStackTrace()));
+				}
 				return true;
 			}
 		}
@@ -1301,18 +1360,17 @@ public final class SystemUtil {
 
 		// a request still will create the error template output, so it can take some time to finish
 		for (int i = 0; i < 100; i++) {
-			// SystemOut.printDate("STOP A THREAD");
-			// SystemOut.printDate("- alive?" + thread.isAlive());
-			// SystemOut.printDate("- interupted?" + thread.isInterrupted());
-			// SystemOut.printDate("- inLucee?" + isInLucee(thread));
-			// SystemOut.printDate(ExceptionUtil.toString(thread.getStackTrace()));
 			if (!isInLucee(thread)) {
 				if (log != null) log.info("thread", "sucessfully " + (force ? "stop" : "interrupt") + " thread.");
 				return true;
 			}
 			SystemUtil.sleep(10);
 		}
-		if (log != null) log.error("thread", "failed to " + (force ? "stop" : "interrupt") + " thread." + "\n" + ExceptionUtil.toString(thread.getStackTrace()));
+		if (log != null) {
+
+			log.log(force ? Log.LEVEL_ERROR : Log.LEVEL_WARN, "thread", "failed to " + (force ? "stop" : "interrupt") + " thread." + "\n",
+					ExceptionUtil.toThrowable(thread.getStackTrace()));
+		}
 		return false;
 	}
 
@@ -1333,10 +1391,19 @@ public final class SystemUtil {
 	public static InputStream getResourceAsStream(Bundle bundle, String path) {
 		// check the bundle for the resource
 		InputStream is;
+		if (bundle == null) {
+			ClassLoader cl = PageSourceImpl.class.getClassLoader();
+			if (cl instanceof BundleClassLoader) {
+				bundle = ((BundleClassLoader) cl).getBundle();
+			}
+		}
 		if (bundle != null) {
 			try {
 				is = bundle.getEntry(path).openStream();
 				if (is != null) return is;
+				if (path.startsWith("/")) is = bundle.getEntry(path.substring(1)).openStream();
+				if (is != null) return is;
+
 			}
 			catch (Throwable t) {
 				ExceptionUtil.rethrowIfNecessary(t);
@@ -1348,6 +1415,8 @@ public final class SystemUtil {
 		try {
 			is = cl.getResourceAsStream(path);
 			if (is != null) return is;
+			if (path.startsWith("/")) is = cl.getResourceAsStream(path.substring(1));
+			if (is != null) return is;
 		}
 		catch (Throwable t) {
 			ExceptionUtil.rethrowIfNecessary(t);
@@ -1358,6 +1427,8 @@ public final class SystemUtil {
 		try {
 			is = cl.getResourceAsStream(path);
 			if (is != null) return is;
+			if (path.startsWith("/")) is = cl.getResourceAsStream(path.substring(1));
+			if (is != null) return is;
 		}
 		catch (Throwable t) {
 			ExceptionUtil.rethrowIfNecessary(t);
@@ -1367,6 +1438,8 @@ public final class SystemUtil {
 		cl = ClassLoader.getSystemClassLoader();
 		try {
 			is = cl.getResourceAsStream(path);
+			if (is != null) return is;
+			if (path.startsWith("/")) is = cl.getResourceAsStream(path.substring(1));
 			if (is != null) return is;
 		}
 		catch (Throwable t) {
@@ -1632,7 +1705,8 @@ public final class SystemUtil {
 				booted = Caster.toBoolean(m.invoke(null, EMPTY_OBJ));
 				return booted.booleanValue();
 			}
-			catch (Exception e) {}
+			catch (Exception e) {
+			}
 		}
 		return true;
 	}
@@ -1664,7 +1738,8 @@ public final class SystemUtil {
 				Method m = clazz.getMethod("getJavaObjectInputStreamAccess", EMPTY_CLASS);
 				joisa = m.invoke(null, EMPTY_OBJ);
 			}
-			catch (Exception e) {}
+			catch (Exception e) {
+			}
 		}
 
 		if (joisa != null) {
@@ -1674,9 +1749,31 @@ public final class SystemUtil {
 				m.invoke(joisa, new Object[] { s, class1, cap });
 				return true;
 			}
-			catch (Exception e) {}
+			catch (Exception e) {
+			}
 		}
 		return false;
+	}
+
+	public static String createToken(String prefix, String name) {
+		String str = prefix + ":" + name;
+		String lock = tokens.putIfAbsent(str, str);
+		if (lock == null) {
+			lock = str;
+		}
+		return lock;
+	}
+
+	public static String lineSeparator() {
+		if (Util.isEmpty(lineSeparator)) {
+			synchronized (createToken("line", "separator")) {
+				if (Util.isEmpty(lineSeparator)) {
+					lineSeparator = System.lineSeparator();
+					if (Util.isEmpty(lineSeparator)) lineSeparator = "\n";
+				}
+			}
+		}
+		return lineSeparator;
 	}
 }
 
@@ -1781,22 +1878,22 @@ class MacAddressWrap implements ObjectWrap, Castable, Serializable {
 
 	@Override
 	public int compareTo(String str) throws PageException {
-		return Operator.compare(toString(), str);
+		return OpUtil.compare(ThreadLocalPageContext.get(), toString(), str);
 	}
 
 	@Override
 	public int compareTo(boolean b) throws PageException {
-		return Operator.compare(castToBooleanValue(), b);
+		return OpUtil.compare(ThreadLocalPageContext.get(), castToBooleanValue() ? Boolean.TRUE : Boolean.FALSE, b ? Boolean.TRUE : Boolean.FALSE);
 	}
 
 	@Override
 	public int compareTo(double d) throws PageException {
-		return Operator.compare(castToDoubleValue(), d);
+		return OpUtil.compare(ThreadLocalPageContext.get(), Double.valueOf(castToDoubleValue()), Double.valueOf(d));
 	}
 
 	@Override
 	public int compareTo(DateTime dt) throws PageException {
-		return Operator.compare(toString(), dt.castToString());
+		return OpUtil.compare(ThreadLocalPageContext.get(), toString(), dt.castToString());
 	}
 
 	public static long size(Class clazz) throws URISyntaxException, ZipException, IOException {
