@@ -4,17 +4,17 @@
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
- * License as published by the Free Software Foundation; either 
+ * License as published by the Free Software Foundation; either
  * version 2.1 of the License, or (at your option) any later version.
- * 
+ *
  * This library is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
  * Lesser General Public License for more details.
- * 
- * You should have received a copy of the GNU Lesser General Public 
+ *
+ * You should have received a copy of the GNU Lesser General Public
  * License along with this library.  If not, see <http://www.gnu.org/licenses/>.
- * 
+ *
  **/
 package lucee.runtime.exp;
 
@@ -31,14 +31,13 @@ import lucee.runtime.db.DataSource;
 import lucee.runtime.db.DatasourceConnection;
 import lucee.runtime.db.SQL;
 import lucee.runtime.op.Caster;
-import lucee.runtime.type.KeyImpl;
 import lucee.runtime.type.util.KeyConstants;
 
 /**
  * Database Exception Object
  */
 
-public final class DatabaseException extends PageExceptionImpl {
+public class DatabaseException extends PageExceptionImpl {
 
 	private SQL sql;
 	private String sqlstate = "";
@@ -50,6 +49,7 @@ public final class DatabaseException extends PageExceptionImpl {
 
 		set(sqle);
 		set(dc);
+		initCause(sqle);
 	}
 
 	public DatabaseException(String message, String detail, SQL sql, DatasourceConnection dc) {
@@ -62,7 +62,7 @@ public final class DatabaseException extends PageExceptionImpl {
 
 	/**
 	 * Constructor of the class
-	 * 
+	 *
 	 * @param message error message
 	 * @param detail detailed error message
 	 * @param sqle
@@ -81,18 +81,27 @@ public final class DatabaseException extends PageExceptionImpl {
 	private void set(SQL sql) {
 		this.sql = sql;
 		if (sql != null) {
-			setAdditional(KeyConstants._SQL, sql.toString());
+			try {
+				setAdditional(KeyConstants._SQL, sql.toString());
+			}
+			catch (Exception e) {
+				setAdditional(KeyConstants._SQL, sql.getSQLString());
+			}
 		}
 	}
 
 	private void set(SQLException sqle, String detail) {
 		String sqleMessage = sqle != null ? sqle.getMessage() : "";
-		if (detail != null) {
-			if (!StringUtil.isEmpty(sqleMessage)) setDetail(detail + "\n" + sqleMessage);
-			else setDetail(detail);
+		if (!StringUtil.isEmpty(sqleMessage)) {
+			if (detail != null) {
+				setDetail(detail + "\n" + sqleMessage);
+			}
+			else {
+				setDetail(detail);
+			}
 		}
 		else {
-			if (!StringUtil.isEmpty(sqleMessage)) setDetail(sqleMessage);
+			setDetail(detail);
 		}
 	}
 
@@ -111,33 +120,34 @@ public final class DatabaseException extends PageExceptionImpl {
 			try {
 				DatabaseMetaData md = dc.getConnection().getMetaData();
 				md.getDatabaseProductName();
-				setAdditional(KeyImpl.init("DatabaseName"), md.getDatabaseProductName());
-				setAdditional(KeyImpl.init("DatabaseVersion"), md.getDatabaseProductVersion());
-				setAdditional(KeyImpl.init("DriverName"), md.getDriverName());
-				setAdditional(KeyImpl.init("DriverVersion"), md.getDriverVersion());
+				setAdditional(KeyConstants._DatabaseName, md.getDatabaseProductName());
+				setAdditional(KeyConstants._DatabaseVersion, md.getDatabaseProductVersion());
+				setAdditional(KeyConstants._DriverName, md.getDriverName());
+				setAdditional(KeyConstants._DriverVersion, md.getDriverVersion());
 				// setAdditional("url",md.getURL());
 
 				if (!"__default__".equals(dc.getDatasource().getName())) setAdditional(KeyConstants._Datasource, dc.getDatasource().getName());
 
 			}
-			catch (SQLException e) {}
+			catch (SQLException e) {
+			}
 		}
 	}
 
 	/**
 	 * Constructor of the class
-	 * 
+	 *
 	 * @param message
 	 * @param sqle
 	 * @param sql
-	 * 
+	 *
 	 *            public DatabaseException(String message, SQLException sqle, SQL
 	 *            sql,DatasourceConnection dc) { this(message,null,sqle,sql,dc); }
 	 */
 
 	/**
 	 * Constructor of the class
-	 * 
+	 *
 	 * @param sqle
 	 * @param sql
 	 */
@@ -147,7 +157,7 @@ public final class DatabaseException extends PageExceptionImpl {
 
 	/**
 	 * Constructor of the class
-	 * 
+	 *
 	 * @param sqle
 	 */
 
@@ -160,7 +170,7 @@ public final class DatabaseException extends PageExceptionImpl {
 		if (StringUtil.isEmpty(datasourceName)) datasourceName = Caster.toString(getAdditional().get("DataSource", ""), "");
 
 		CatchBlock sct = super.getCatchBlock(config);
-		sct.setEL("NativeErrorCode", new Double(errorcode));
+		sct.setEL("NativeErrorCode", Double.valueOf(errorcode));
 		sct.setEL("DataSource", datasourceName);
 		sct.setEL("SQLState", sqlstate);
 		sct.setEL("Sql", strSQL);
@@ -186,7 +196,7 @@ public final class DatabaseException extends PageExceptionImpl {
 		}
 
 		// create error detail
-		DatabaseException de = new DatabaseException("datasource [" + datasource + "] doesn't exist", null, null, null);
+		DatabaseException de = new DatabaseException("Datasource [" + datasource + "] doesn't exist", null, null, null);
 		de.setDetail(ExceptionUtil.createSoundexDetail(datasource, list.iterator(), "datasource names"));
 		de.setAdditional(KeyConstants._Datasource, datasource);
 		return de;
