@@ -30,7 +30,6 @@ import lucee.runtime.exp.PageException;
 import lucee.runtime.ext.function.BIF;
 import lucee.runtime.op.Caster;
 import lucee.runtime.type.Collection;
-import lucee.runtime.type.KeyImpl;
 import lucee.runtime.type.Struct;
 import lucee.runtime.type.StructImpl;
 import lucee.runtime.type.util.KeyConstants;
@@ -42,13 +41,13 @@ public final class CacheGetMetadata extends BIF {
 
 	private static final long serialVersionUID = -470089623854482521L;
 
-	private static final Collection.Key CACHE_HITCOUNT = KeyImpl.intern("cache_hitcount");
-	private static final Collection.Key CACHE_MISSCOUNT = KeyImpl.intern("cache_misscount");
-	private static final Collection.Key CACHE_CUSTOM = KeyImpl.intern("cache_custom");
-	private static final Collection.Key CREATED_TIME = KeyImpl.intern("createdtime");
-	private static final Collection.Key IDLE_TIME = KeyImpl.intern("idletime");
-	private static final Collection.Key LAST_HIT = KeyImpl.intern("lasthit");
-	private static final Collection.Key LAST_UPDATED = KeyImpl.intern("lastupdated");
+	private static final Collection.Key CACHE_HITCOUNT = KeyConstants._cache_hitcount;
+	private static final Collection.Key CACHE_MISSCOUNT = KeyConstants._cache_misscount;
+	private static final Collection.Key CACHE_CUSTOM = KeyConstants._cache_custom;
+	private static final Collection.Key CREATED_TIME = KeyConstants._createdtime;
+	private static final Collection.Key IDLE_TIME = KeyConstants._idletime;
+	private static final Collection.Key LAST_HIT = KeyConstants._lasthit;
+	private static final Collection.Key LAST_UPDATED = KeyConstants._lastupdated;
 
 	public static Struct call(PageContext pc, String id) throws PageException {
 		return call(pc, id, null);
@@ -60,18 +59,18 @@ public final class CacheGetMetadata extends BIF {
 			CacheEntry entry = cache.getCacheEntry(CacheUtil.key(id));
 
 			Struct info = new StructImpl();
-			info.set(CACHE_HITCOUNT, new Double(cache.hitCount()));
-			info.set(CACHE_MISSCOUNT, new Double(cache.missCount()));
+			info.set(CACHE_HITCOUNT, Double.valueOf(cache.hitCount()));
+			info.set(CACHE_MISSCOUNT, Double.valueOf(cache.missCount()));
 			info.set(CACHE_CUSTOM, cache.getCustomInfo());
 			info.set(KeyConstants._custom, entry.getCustomInfo());
 
 			info.set(CREATED_TIME, entry.created());
-			info.set(KeyConstants._hitcount, new Double(entry.hitCount()));
-			info.set(IDLE_TIME, new Double(entry.idleTimeSpan()));
+			info.set(KeyConstants._hitcount, Double.valueOf(entry.hitCount()));
+			info.set(IDLE_TIME, Double.valueOf(entry.idleTimeSpan()));
 			info.set(LAST_HIT, entry.lastHit());
 			info.set(LAST_UPDATED, entry.lastModified());
-			info.set(KeyConstants._size, new Double(entry.size()));
-			info.set(KeyConstants._timespan, new Double(entry.liveTimeSpan()));
+			info.set(KeyConstants._size, Double.valueOf(entry.size()));
+			info.set(KeyConstants._timespan, Double.valueOf(entry.liveTimeSpan()));
 			return info;
 		}
 		catch (IOException e) {
