@@ -4,15 +4,15 @@
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
- * License as published by the Free Software Foundation; either 
+ * License as published by the Free Software Foundation; either
  * version 2.1 of the License, or (at your option) any later version.
- * 
+ *
  * This library is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
  * Lesser General Public License for more details.
- * 
- * You should have received a copy of the GNU Lesser General Public 
+ *
+ * You should have received a copy of the GNU Lesser General Public
  * License along with this library.  If not, see <http://www.gnu.org/licenses/>.
  *
  **/
@@ -55,16 +55,18 @@ import java.util.Map.Entry;
 import java.util.Set;
 import java.util.TimeZone;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.atomic.AtomicInteger;
 
 import lucee.commons.db.DBUtil;
 import lucee.commons.io.IOUtil;
+import lucee.commons.io.SystemUtil;
 import lucee.commons.io.SystemUtil.TemplateLine;
 import lucee.commons.lang.ExceptionUtil;
 import lucee.commons.lang.StringUtil;
 import lucee.loader.engine.CFMLEngine;
 import lucee.loader.engine.CFMLEngineFactory;
 import lucee.runtime.PageContext;
-import lucee.runtime.config.ConfigWebImpl;
+import lucee.runtime.config.ConfigWebPro;
 import lucee.runtime.config.NullSupportHelper;
 import lucee.runtime.converter.ScriptConverter;
 import lucee.runtime.db.DataSourceUtil;
@@ -115,20 +117,25 @@ import lucee.runtime.type.util.StructSupport;
  * implementation of the query interface
  */
 /**
- * 
+ *
  */
 public class QueryImpl implements Query, Objects, QueryResult {
 
 	private static final long serialVersionUID = 1035795427320192551L; // do not chnage
 
-	public static final Collection.Key GENERATED_KEYS = KeyImpl.intern("GENERATED_KEYS");
-	public static final Collection.Key GENERATEDKEYS = KeyImpl.intern("GENERATEDKEYS");
+	public static final Collection.Key GENERATED_KEYS = KeyConstants._GENERATED_KEYS;
+	public static final Collection.Key GENERATEDKEYS = KeyConstants._GENERATEDKEYS;
+
+	private static boolean useMSSQLModern;
+
+	private boolean populating;
 
 	private QueryColumnImpl[] columns;
 	private Collection.Key[] columnNames;
+	private ResultSetMetaData metadata;
 	private SQL sql;
 	private Map<Integer, Integer> currRow = new ConcurrentHashMap<Integer, Integer>();
-	private int recordcount = 0;
+	private AtomicInteger recordcount = new AtomicInteger(0);
 	private int columncount;
 	private long exeTime = 0;
 	private String cacheType = null;
@@ -136,9 +143,14 @@ public class QueryImpl implements Query, Objects, QueryResult {
 	private int updateCount;
 	private QueryImpl generatedKeys;
 	private TemplateLine templateLine;
+	private String datasourceName;
 
 	private Collection.Key indexName;
-	private Map<Collection.Key, Integer> indexes;// = new ConcurrentHashMap<Collection.Key,Integer>();
+	private Map<Collection.Key, Integer> indexes;// = new
+
+	static {
+		useMSSQLModern = Caster.toBooleanValue(SystemUtil.getSystemPropOrEnvVar("lucee.datasource.mssql.modern", null), false);
+	}
 
 	@Override
 	public String getTemplate() {
@@ -148,6 +160,10 @@ public class QueryImpl implements Query, Objects, QueryResult {
 	@Override
 	public TemplateLine getTemplateLine() { // FUTURE add to interface
 		return templateLine;
+	}
+
+	public String getDatasourceName() {
+		return datasourceName;
 	}
 
 	public void setTemplateLine(TemplateLine templateLine) {
@@ -161,7 +177,7 @@ public class QueryImpl implements Query, Objects, QueryResult {
 
 	/**
 	 * create a QueryImpl from a SQL Resultset
-	 * 
+	 *
 	 * @param result SQL Resultset
 	 * @param maxrow
 	 * @param name
@@ -173,7 +189,7 @@ public class QueryImpl implements Query, Objects, QueryResult {
 		// stopwatch.start();
 		long start = System.nanoTime();
 		try {
-			fillResult(this, null, null, null, result, maxrow, false, false, tz);
+			fillResult(this, null, null, null, result, maxrow, true, false, tz);
 		}
 		catch (SQLException e) {
 			throw new DatabaseException(e, null);
@@ -187,7 +203,8 @@ public class QueryImpl implements Query, Objects, QueryResult {
 	/**
 	 * Constructor of the class only for internal usage (cloning/deserialize)
 	 */
-	public QueryImpl() {}
+	public QueryImpl() {
+	}
 
 	public QueryImpl(ResultSet result, String name, TimeZone tz) throws PageException {
 		this.name = name;
@@ -205,7 +222,7 @@ public class QueryImpl implements Query, Objects, QueryResult {
 
 	/**
 	 * constructor of the class, to generate a resultset from a sql query
-	 * 
+	 *
 	 * @param dc Connection to a database
 	 * @param name
 	 * @param sql sql to execute
@@ -220,6 +237,7 @@ public class QueryImpl implements Query, Objects, QueryResult {
 			boolean createUpdateData, boolean allowToCachePreperadeStatement, Collection.Key indexName) throws PageException {
 		this.name = name;
 		this.templateLine = templateLine;
+		this.datasourceName = dc.getDatasource().getName();
 		this.indexName = indexName;
 		this.sql = sql;
 		execute(pc, dc, sql, maxrow, fetchsize, timeout, createUpdateData, allowToCachePreperadeStatement, this, null, null);
@@ -228,6 +246,7 @@ public class QueryImpl implements Query, Objects, QueryResult {
 	public static QueryStruct toStruct(PageContext pc, DatasourceConnection dc, SQL sql, Collection.Key keyName, int maxrow, int fetchsize, TimeSpan timeout, String name,
 			TemplateLine templateLine, boolean createUpdateData, boolean allowToCachePreperadeStatement) throws PageException {
 		QueryStruct sct = new QueryStruct(name, sql, templateLine);
+		sct.setDatasourceName(dc.getDatasource().getName());
 		execute(pc, dc, sql, maxrow, fetchsize, timeout, createUpdateData, allowToCachePreperadeStatement, null, sct, keyName);
 		return sct;
 	}
@@ -235,12 +254,19 @@ public class QueryImpl implements Query, Objects, QueryResult {
 	public static QueryArray toArray(PageContext pc, DatasourceConnection dc, SQL sql, int maxrow, int fetchsize, TimeSpan timeout, String name, TemplateLine templateLine,
 			boolean createUpdateData, boolean allowToCachePreperadeStatement) throws PageException {
 		QueryArray arr = new QueryArray(name, sql, templateLine);
+		arr.setDatasourceName(dc.getDatasource().getName());
 		execute(pc, dc, sql, maxrow, fetchsize, timeout, createUpdateData, allowToCachePreperadeStatement, null, arr, null);
 		return arr;
 	}
 
 	private static void execute(PageContext pc, DatasourceConnection dc, SQL sql, int maxrow, int fetchsize, TimeSpan timeout, boolean createUpdateData,
 			boolean allowToCachePreperadeStatement, QueryImpl qry, QueryResult qr, Collection.Key keyName) throws PageException {
+
+		// MSSQL is handled separatly
+		if (useMSSQLModern && DataSourceUtil.isMSSQLDriver(dc)) {
+			executeMSSQL(pc, dc, sql, maxrow, fetchsize, timeout, createUpdateData, allowToCachePreperadeStatement, qry, qr, keyName);
+			return;
+		}
 
 		TimeZone tz = ThreadLocalPageContext.getTimeZone(pc);
 
@@ -286,12 +312,10 @@ public class QueryImpl implements Query, Objects, QueryResult {
 					// res=stat.getResultSet();
 					// if(fillResult(dc,res, maxrow, true,createGeneratedKeys,tz))break;
 					if (fillResult(qry, qr, keyName, dc, stat.getResultSet(), maxrow, true, createGeneratedKeys, tz)) break;
-
 				}
 				else if ((uc = setUpdateCount(qry != null ? qry : qr, stat)) != -1) {
 					if (uc > 0 && createGeneratedKeys && qry != null) qry.setGeneratedKeys(dc, stat, tz);
 				}
-
 				else break;
 
 				try {
@@ -330,6 +354,180 @@ public class QueryImpl implements Query, Objects, QueryResult {
 
 	}
 
+	private static void executeMSSQL(PageContext pc, DatasourceConnection dc, SQL sql, int maxrow, int fetchsize, TimeSpan timeout, boolean createUpdateData,
+			boolean allowToCachePreperadeStatement, QueryImpl qry, QueryResult qr, Collection.Key keyName) throws PageException {
+
+		TimeZone tz = ThreadLocalPageContext.getTimeZone(pc);
+
+		// check if datasource support Generated Keys
+		boolean createGeneratedKeys = createUpdateData;
+		if (createUpdateData) {
+			if (!dc.supportsGetGeneratedKeys()) createGeneratedKeys = false;
+		}
+
+		// check SQL Restrictions
+		if (dc.getDatasource().hasSQLRestriction()) {
+			QueryUtil.checkSQLRestriction(dc, sql);
+		}
+
+		Statement stat = null;
+		// Stopwatch stopwatch=new Stopwatch();
+		long start = System.nanoTime();
+		// stopwatch.start();
+		boolean hasResult = false;
+		boolean hasPossibleGeneratedKeys = false;
+		// boolean closeStatement=true;
+		try {
+			SQLItem[] items = sql.getItems();
+			if (items.length == 0) {
+				stat = dc.getConnection().createStatement();
+				setAttributes(stat, maxrow, fetchsize, timeout);
+				// some driver do not support second argument
+				// hasResult=createGeneratedKeys?stat.execute(sql.getSQLString(),Statement.RETURN_GENERATED_KEYS):stat.execute(sql.getSQLString());
+				hasResult = QueryUtil.execute(pc, stat, createGeneratedKeys, sql);
+			}
+			else {
+				// some driver do not support second argument
+				PreparedStatement preStat = dc.getPreparedStatement(sql, createGeneratedKeys, allowToCachePreperadeStatement);
+				// closeStatement=false;
+				stat = preStat;
+				setAttributes(preStat, maxrow, fetchsize, timeout);
+				setItems(pc, ThreadLocalPageContext.getTimeZone(pc), preStat, items);
+				hasResult = QueryUtil.execute(pc, preStat);
+			}
+			int uc;
+			int resultsetCount = 0;
+			// ResultSet res;
+			do {
+				resultsetCount++;
+
+				if (hasResult) {
+
+					if (fillResult(qry, qr, keyName, dc, stat.getResultSet(), maxrow, true, createGeneratedKeys, tz)) {
+						/*
+						 * Some SQL implementations (e.g. SQL Server) allow both a resultset *and* keys to be generated in a
+						 * single statement. For example:
+						 *
+						 * insert into XXXX (col1, col2) OUTPUT INSERTED.* values (1, 'a'), (2, 'b'), (3, 'c')
+						 *
+						 * In the above, the "OUTPUT INSERTED.*" will return a recordset of all the changes.
+						 */
+						if (resultsetCount == 1 && !hasPossibleGeneratedKeys) {
+							// we need to attempt to get the generated keys, because an exception might be getting throw
+							try {
+								/*
+								 * The Microsoft SQL Server driver can advance the resultset when the getGeneratedKeys() method is
+								 * called. If the next resultset happens to have an exception, we have to be able to track that
+								 * exception so we can report it.
+								 */
+								ResultSet rs = stat.getGeneratedKeys();
+								/*
+								 * We should check for any generated keys now, because in the MSSQL driver if we have a single
+								 * resultset (INSERT or UPDATE) that has an OUTPUT clause, the generated keys are only available
+								 * right now.
+								 *
+								 * If we get back false, then an exception happened. However, we will still want to check back later
+								 * in care there are other statements executed later that could return a resultset.
+								 */
+								if (qry != null) {
+									hasPossibleGeneratedKeys = qry != null && !qry.setGeneratedKeys(dc, rs, tz);
+								}
+							}
+							catch (SQLException se) {
+								/*
+								 * We can ignore when SQL Server driver throws the "statement must be executed" message as this is
+								 * the standard exception which happens when there are no keys available.
+								 *
+								 * However, we should report other exceptions because they could becoming from a RAISERROR or other
+								 * exception being generated by SQL Server.
+								 */
+								// TODO we need a change here that less depends on the actual MSSQL JDBC driver
+								if (se.getMessage() != "The statement must be executed before any results can be obtained.") {
+									throw se;
+								}
+								else {
+									hasPossibleGeneratedKeys = true;
+								}
+							}
+						}
+						/*
+						 * When using the MSSQL driver, we need to make sure to go through all the recordset objects because
+						 * there may be exceptions or additional SQL recordsets that need to be processed.
+						 */
+						while (stat.getMoreResults()) {
+							// we just need to advance through all the resultsets, we can ignore
+							// the results since we only return the first resultset
+						}
+						break;
+					}
+				}
+				else if ((uc = setUpdateCount(qry != null ? qry : qr, stat)) != -1) {
+					if (uc > 0) {
+						// since we had some updates, we need to flag that the generated keys need to be checked
+						hasPossibleGeneratedKeys = true;
+					}
+				}
+				else break;
+
+				// try {
+				// hasResult=stat.getMoreResults(Statement.CLOSE_CURRENT_RESULT);
+				hasResult = stat.getMoreResults();
+				// }
+				// catch (SQLException e) {
+				/*
+				 * The JTDS driver (and possibly other drivers) throw exceptions as soon as the query is executed,
+				 * however the MSSQL driver will delay throwing the execution until you try to request the
+				 * recordset.
+				 *
+				 * So we need to check if a SQLException is being thrown and if so, we need to rethrow it.
+				 *
+				 */
+				// if (DataSourceUtil.isMSSQLDriver(dc)) {
+				// throw e;
+				// }
+				// break;
+				// }
+			}
+			while (true);
+		}
+		catch (SQLException e) {
+			throw new DatabaseException(e, sql, dc);
+		}
+		catch (Throwable e) {
+			ExceptionUtil.rethrowIfNecessary(e);
+			throw Caster.toPageException(e);
+		}
+		finally {
+			// we need to look for any possible generated keys from the query
+			if (createGeneratedKeys && hasPossibleGeneratedKeys && qry != null) {
+				/*
+				 * The MSSQL driver recommends always checking for generated keys after all recordsets have been
+				 * parsed. This will prevent the Statement.getGeneratedKeys() from advancing the recordset.
+				 *
+				 * See the following link for more information:
+				 * https://social.technet.microsoft.com/Forums/ie/en-US/a91f8aa2-6ec0-447d-8b95-9e99e1da56fb/the-
+				 * statement-must-be-executed-before-any-results-can-be-obtained-error-with-jdbc-20?forum=
+				 * sqldataaccess
+				 */
+				qry.setGeneratedKeys(dc, stat, tz);
+			}
+			// if(closeStatement)
+			DBUtil.closeEL(stat);
+		}
+		if (qry != null) {
+			qry.exeTime = System.nanoTime() - start;
+
+			if (qry.columncount == 0) {
+				if (qry.columnNames == null) qry.columnNames = new Collection.Key[0];
+				if (qry.columns == null) qry.columns = new QueryColumnImpl[0];
+			}
+		}
+		else {
+			qr.setExecutionTime(System.nanoTime() - start);
+		}
+
+	}
+
 	private static int setUpdateCount(QueryResult qr, Statement stat) {
 		try {
 			int uc = stat.getUpdateCount();
@@ -347,8 +545,7 @@ public class QueryImpl implements Query, Objects, QueryResult {
 	private boolean setGeneratedKeys(DatasourceConnection dc, Statement stat, TimeZone tz) {
 		try {
 			ResultSet rs = stat.getGeneratedKeys();
-			setGeneratedKeys(dc, rs, tz);
-			return true;
+			return setGeneratedKeys(dc, rs, tz);
 		}
 		catch (Throwable t) {
 			ExceptionUtil.rethrowIfNecessary(t);
@@ -356,15 +553,33 @@ public class QueryImpl implements Query, Objects, QueryResult {
 		}
 	}
 
-	private void setGeneratedKeys(DatasourceConnection dc, ResultSet rs, TimeZone tz) throws PageException {
-		generatedKeys = new QueryImpl(rs, "", tz);
+	private boolean setGeneratedKeys(DatasourceConnection dc, ResultSet rs, TimeZone tz) throws PageException {
+		if (DataSourceUtil.isMSSQL(dc)) {
+			QueryImpl results = new QueryImpl(rs, "", tz);
+			int columnCount = results.getColumnCount();
+			// ACF compatibility action
+			if (columnCount == 1) {
+				results.renameEL(GENERATED_KEYS, KeyConstants._IDENTITYCOL);
+				results.renameEL(GENERATEDKEYS, KeyConstants._IDENTITYCOL);
+				results.renameEL(KeyConstants._ID, KeyConstants._IDENTITYCOL);
+			}
+			if (DataSourceUtil.isMSSQLDriver(dc) && ((columnCount > 1) || results.getIndexFromKey(KeyConstants._IDENTITYCOL) == -1)) {
+				return false;
+			}
+			/*
+			 * The SQL Server driver can end up advancing to a new recordset that is not part of the resultset
+			 * for a INSERT/UPDATE operation. So if we do not find the identity column or we have more than once
+			 * column, we should just ignore the results.
+			 */
 
-		// ACF compatibility action
-		if (generatedKeys.getColumnCount() == 1 && DataSourceUtil.isMSSQL(dc)) {
-			generatedKeys.renameEL(GENERATED_KEYS, KeyConstants._IDENTITYCOL);
-			generatedKeys.renameEL(GENERATEDKEYS, KeyConstants._IDENTITYCOL);
-			generatedKeys.renameEL(KeyConstants._ID, KeyConstants._IDENTITYCOL);
+			// save the results
+			generatedKeys = results;
 		}
+		else {
+			generatedKeys = new QueryImpl(rs, "", tz);
+		}
+
+		return true;
 	}
 
 	private static void setItems(PageContext pc, TimeZone tz, PreparedStatement preStat, SQLItem[] items) throws DatabaseException, PageException, SQLException {
@@ -391,7 +606,15 @@ public class QueryImpl implements Query, Objects, QueryResult {
 	private static void setAttributes(Statement stat, int maxrow, int fetchsize, TimeSpan timeout) throws SQLException {
 		if (maxrow > -1) stat.setMaxRows(maxrow);
 		if (fetchsize > 0) stat.setFetchSize(fetchsize);
-		if (timeout != null && ((int) timeout.getSeconds()) > 0) DataSourceUtil.setQueryTimeoutSilent(stat, (int) timeout.getSeconds());
+		int to = getSeconds(timeout);
+		if (to > 0) DataSourceUtil.setQueryTimeoutSilent(stat, to);
+	}
+
+	public static int getSeconds(TimeSpan timeout) {
+		if (timeout == null) return 0;
+		if (timeout.getSeconds() > 0) return Caster.toIntValue(timeout.getSeconds());
+		if (timeout.getMillis() > 0) return 1;
+		return 0;
 	}
 
 	private static boolean fillResult(QueryImpl qry, QueryResult qr, Collection.Key keyName, DatasourceConnection dc, ResultSet result, int maxrow, boolean closeResult,
@@ -401,9 +624,10 @@ public class QueryImpl implements Query, Objects, QueryResult {
 		int recordcount = 0, columncount = 0;
 		Collection.Key[] columnNames = null;
 		QueryColumnImpl[] columns = null;
+		ResultSetMetaData meta = null;
 
 		try {
-			ResultSetMetaData meta = result.getMetaData();
+			meta = result.getMetaData();
 			columncount = meta.getColumnCount();
 
 			// set header arrays
@@ -457,6 +681,7 @@ public class QueryImpl implements Query, Objects, QueryResult {
 
 			// fill QUERY
 			if (qry != null) {
+				qry.populating = true;
 				int index = -1;
 				if (qry.indexName != null) {
 					qry.indexes = new ConcurrentHashMap<Collection.Key, Integer>();
@@ -477,7 +702,6 @@ public class QueryImpl implements Query, Objects, QueryResult {
 							o = casts[i].toCFType(tz, result, usedColumns[i] + 1);
 							if (index == i) {
 								qry.indexes.put(Caster.toKey(o), recordcount + 1);
-
 							}
 							columns[i].add(o);
 						}
@@ -507,7 +731,7 @@ public class QueryImpl implements Query, Objects, QueryResult {
 					if (maxrow > -1 && recordcount >= maxrow) {
 						break;
 					}
-					sct = new StructImpl();
+					sct = new StructImpl(Struct.TYPE_LINKED);
 					Object val;
 
 					for (int i = 0; i < usedColumns.length; i++) {
@@ -517,16 +741,31 @@ public class QueryImpl implements Query, Objects, QueryResult {
 					}
 					if (qa != null) qa.appendEL(sct);
 					else {
-						k = sct.get(keyName, CollectionUtil.NULL);
-						if (k == CollectionUtil.NULL) {
-							Struct keys = new StructImpl();
-							for (Collection.Key tmp: columnNames) {
-								keys.set(tmp, "");
+						// QueryStruct
+						if (keyName == null) {
+							// single record struct
+							if (recordcount > 0) {
+								throw new ApplicationException("Attribute [keyColumn] is required when return type is set to Struct and more than one record is returned");
 							}
-							throw StructSupport.invalidKey(null, keys, keyName, "resultset");
+
+							qs.setSingleRecord(true);
+							for (Collection.Key tmp: columnNames) {
+								qs.set(tmp, sct.get(tmp));
+							}
 						}
-						if (k == null) k = "";
-						qs.set(KeyImpl.toKey(k), sct);
+						else {
+							// struct of structs with keyName column as key
+							k = sct.get(keyName, CollectionUtil.NULL);
+							if (k == CollectionUtil.NULL) {
+								Struct keys = new StructImpl();
+								for (Collection.Key tmp: columnNames) {
+									keys.set(tmp, "");
+								}
+								throw StructSupport.invalidKey(null, keys, keyName, "resultset");
+							}
+							if (k == null) k = "";
+							qs.set(KeyImpl.toKey(k), sct);
+						}
 					}
 
 					++recordcount;
@@ -534,16 +773,19 @@ public class QueryImpl implements Query, Objects, QueryResult {
 			}
 		}
 		finally {
+
 			if (qry != null) {
+				qry.populating = false;
 				qry.columncount = columncount;
-				qry.recordcount = recordcount;
+				qry.recordcount.set(recordcount);
 				qry.columnNames = columnNames;
 				qry.columns = columns;
+				qry.metadata = meta;
 			}
 			else {
 				qr.setColumnNames(columnNames);
 			}
-			if (closeResult) IOUtil.closeEL(result);
+			if (closeResult) IOUtil.close(result);
 		}
 		return true;
 	}
@@ -565,7 +807,7 @@ public class QueryImpl implements Query, Objects, QueryResult {
 
 	/**
 	 * constructor of the class, to generate an empty resultset (no database execution)
-	 * 
+	 *
 	 * @param strColumns columns for the resultset
 	 * @param rowNumber count of rows to generate (empty fields)
 	 * @param name
@@ -576,18 +818,18 @@ public class QueryImpl implements Query, Objects, QueryResult {
 	public QueryImpl(String[] strColumns, int rowNumber, String name) {
 		this.name = name;
 		columncount = strColumns.length;
-		recordcount = rowNumber;
+		recordcount.set(rowNumber);
 		columnNames = new Collection.Key[columncount];
 		columns = new QueryColumnImpl[columncount];
 		for (int i = 0; i < strColumns.length; i++) {
 			columnNames[i] = KeyImpl.init(strColumns[i].trim());
-			columns[i] = new QueryColumnImpl(this, columnNames[i], Types.OTHER, recordcount);
+			columns[i] = new QueryColumnImpl(this, columnNames[i], Types.OTHER, getRecordcount());
 		}
 	}
 
 	/**
 	 * constructor of the class, to generate an empty resultset (no database execution)
-	 * 
+	 *
 	 * @param strColumns columns for the resultset
 	 * @param rowNumber count of rows to generate (empty fields)
 	 * @param name
@@ -599,12 +841,12 @@ public class QueryImpl implements Query, Objects, QueryResult {
 	public QueryImpl(Collection.Key[] columnKeys, int rowNumber, String name, SQL sql) throws DatabaseException {
 		this.name = name;
 		columncount = columnKeys.length;
-		recordcount = rowNumber;
+		recordcount.set(rowNumber);
 		columnNames = new Collection.Key[columncount];
 		columns = new QueryColumnImpl[columncount];
 		for (int i = 0; i < columnKeys.length; i++) {
 			columnNames[i] = columnKeys[i];
-			columns[i] = new QueryColumnImpl(this, columnNames[i], Types.OTHER, recordcount);
+			columns[i] = new QueryColumnImpl(this, columnNames[i], Types.OTHER, getRecordcount());
 		}
 		validateColumnNames(columnNames);
 		this.sql = sql;
@@ -612,7 +854,7 @@ public class QueryImpl implements Query, Objects, QueryResult {
 
 	/**
 	 * constructor of the class, to generate an empty resultset (no database execution)
-	 * 
+	 *
 	 * @param strColumns columns for the resultset
 	 * @param strTypes array of the types
 	 * @param rowNumber count of rows to generate (empty fields)
@@ -623,18 +865,18 @@ public class QueryImpl implements Query, Objects, QueryResult {
 		this.name = name;
 		columncount = strColumns.length;
 		if (strTypes.length != columncount) throw new DatabaseException("columns and types has not the same count", null, null, null);
-		recordcount = rowNumber;
+		recordcount.set(rowNumber);
 		columnNames = new Collection.Key[columncount];
 		columns = new QueryColumnImpl[columncount];
 		for (int i = 0; i < strColumns.length; i++) {
 			columnNames[i] = KeyImpl.init(strColumns[i].trim());
-			columns[i] = new QueryColumnImpl(this, columnNames[i], SQLCaster.toSQLType(strTypes[i]), recordcount);
+			columns[i] = new QueryColumnImpl(this, columnNames[i], SQLCaster.toSQLType(strTypes[i]), getRecordcount());
 		}
 	}
 
 	/**
 	 * constructor of the class, to generate an empty resultset (no database execution)
-	 * 
+	 *
 	 * @param strColumns columns for the resultset
 	 * @param strTypes array of the types
 	 * @param rowNumber count of rows to generate (empty fields)
@@ -646,38 +888,38 @@ public class QueryImpl implements Query, Objects, QueryResult {
 		this.columnNames = columnNames;
 		columncount = columnNames.length;
 		if (strTypes.length != columncount) throw new DatabaseException("columns and types has not the same count", null, null, null);
-		recordcount = rowNumber;
+		recordcount.set(rowNumber);
 		columns = new QueryColumnImpl[columncount];
 		for (int i = 0; i < columnNames.length; i++) {
-			columns[i] = new QueryColumnImpl(this, columnNames[i], SQLCaster.toSQLType(strTypes[i]), recordcount);
+			columns[i] = new QueryColumnImpl(this, columnNames[i], SQLCaster.toSQLType(strTypes[i]), getRecordcount());
 		}
 		validateColumnNames(columnNames);
 	}
 
 	/**
 	 * constructor of the class, to generate an empty resultset (no database execution)
-	 * 
+	 *
 	 * @param arrColumns columns for the resultset
 	 * @param rowNumber count of rows to generate (empty fields)
 	 * @param name
-	 * @throws DatabaseException
+	 * @throws PageException
 	 */
-	public QueryImpl(Array arrColumns, int rowNumber, String name) throws DatabaseException {
+	public QueryImpl(Array arrColumns, int rowNumber, String name) throws PageException {
 		this.name = name;
 		columncount = arrColumns.size();
-		recordcount = rowNumber;
+		recordcount.set(rowNumber);
 		columnNames = new Collection.Key[columncount];
 		columns = new QueryColumnImpl[columncount];
 		for (int i = 0; i < columncount; i++) {
-			columnNames[i] = KeyImpl.init(arrColumns.get(i + 1, "").toString().trim());
-			columns[i] = new QueryColumnImpl(this, columnNames[i], Types.OTHER, recordcount);
+			columnNames[i] = KeyImpl.init(Caster.toString(arrColumns.get(i + 1, "")).trim());
+			columns[i] = new QueryColumnImpl(this, columnNames[i], Types.OTHER, getRecordcount());
 		}
 		validateColumnNames(columnNames);
 	}
 
 	/**
 	 * constructor of the class, to generate an empty resultset (no database execution)
-	 * 
+	 *
 	 * @param arrColumns columns for the resultset
 	 * @param arrTypes type of the columns
 	 * @param rowNumber count of rows to generate (empty fields)
@@ -688,12 +930,12 @@ public class QueryImpl implements Query, Objects, QueryResult {
 		this.name = name;
 		columncount = arrColumns.size();
 		if (arrTypes.size() != columncount) throw new DatabaseException("columns and types has not the same count", null, null, null);
-		recordcount = rowNumber;
+		recordcount.set(rowNumber);
 		columnNames = new Collection.Key[columncount];
 		columns = new QueryColumnImpl[columncount];
 		for (int i = 0; i < columncount; i++) {
 			columnNames[i] = KeyImpl.init(arrColumns.get(i + 1, "").toString().trim());
-			columns[i] = new QueryColumnImpl(this, columnNames[i], SQLCaster.toSQLType(Caster.toString(arrTypes.get(i + 1, ""))), recordcount);
+			columns[i] = new QueryColumnImpl(this, columnNames[i], SQLCaster.toSQLType(Caster.toString(arrTypes.get(i + 1, ""))), getRecordcount());
 		}
 		validateColumnNames(columnNames);
 	}
@@ -704,7 +946,8 @@ public class QueryImpl implements Query, Objects, QueryResult {
 
 			// Only allow column names that are valid variable name
 			// if(!Decision.isSimpleVariableName(columnNames[i]))
-			// throw new DatabaseException("invalid column name ["+columnNames[i]+"] for query", "column names
+			// throw new DatabaseException("invalid column name ["+columnNames[i]+"] for query",
+			// "column names
 			// must start with a letter and can be followed by
 			// letters numbers and underscores [_]. RegExp:[a-zA-Z][a-zA-Z0-9_]*",null,null,null);
 
@@ -728,7 +971,7 @@ public class QueryImpl implements Query, Objects, QueryResult {
 	 * this.columns=columns; this.exeTime=exeTime; this.isCached=isCached; this.name=name;
 	 * this.columncount=columnNames.length; this.recordcount=columns.length==0?0:columns[0].size();
 	 * this.sql=sql;
-	 * 
+	 *
 	 * }
 	 */
 
@@ -753,13 +996,13 @@ public class QueryImpl implements Query, Objects, QueryResult {
 		}
 
 		columncount = columns.length;
-		recordcount = len;
+		recordcount.set(len);
 		this.columnNames = columnNames;
 	}
 
 	/**
 	 * constructor of the class
-	 * 
+	 *
 	 * @param columnList
 	 * @param data
 	 * @param name
@@ -821,7 +1064,7 @@ public class QueryImpl implements Query, Objects, QueryResult {
 		for (int i = 0; i < columns.length; i++) {
 			columns[i].clear();
 		}
-		recordcount = 0;
+		recordcount.set(0);
 	}
 
 	@Override
@@ -857,7 +1100,7 @@ public class QueryImpl implements Query, Objects, QueryResult {
 
 	private boolean getKeyCase(PageContext pc) {
 		pc = ThreadLocalPageContext.get(pc);
-		return pc != null && pc.getCurrentTemplateDialect() == CFMLEngine.DIALECT_CFML && !((ConfigWebImpl) pc.getConfig()).preserveCase();
+		return pc != null && pc.getCurrentTemplateDialect() == CFMLEngine.DIALECT_CFML && !((ConfigWebPro) pc.getConfig()).preserveCase();
 	}
 
 	@Override
@@ -871,7 +1114,7 @@ public class QueryImpl implements Query, Objects, QueryResult {
 		if (index != -1) {
 			// we only return default value if row exists
 			// LDEV-1201
-			if (row > 0 && row <= recordcount) {
+			if (row > 0 && row <= getRecordcount()) {
 				Object val = columns[index].get(row, CollectionUtil.NULL);
 				if (val != CollectionUtil.NULL) return val;
 				return NullSupportHelper.full() ? null : "";
@@ -881,8 +1124,8 @@ public class QueryImpl implements Query, Objects, QueryResult {
 			// return columns[index].get(row,defaultValue);
 		}
 		if (key.length() >= 10) {
-			if (key.equals(KeyConstants._RECORDCOUNT)) return new Double(getRecordcount());
-			if (key.equals(KeyConstants._CURRENTROW)) return new Double(row);
+			if (key.equals(KeyConstants._RECORDCOUNT)) return Double.valueOf(getRecordcount());
+			if (key.equals(KeyConstants._CURRENTROW)) return Double.valueOf(row);
 			if (key.equals(KeyConstants._COLUMNLIST)) return getColumnlist(getKeyCase(ThreadLocalPageContext.get()));
 		}
 		return defaultValue;
@@ -902,11 +1145,12 @@ public class QueryImpl implements Query, Objects, QueryResult {
 			return NullSupportHelper.full() ? null : "";
 		}
 		if (key.length() >= 10) {
-			if (key.equals(KeyConstants._RECORDCOUNT)) return new Double(getRecordcount());
-			if (key.equals(KeyConstants._CURRENTROW)) return new Double(row);
+			if (key.equals(KeyConstants._RECORDCOUNT)) return Double.valueOf(getRecordcount());
+			if (key.equals(KeyConstants._CURRENTROW)) return Double.valueOf(row);
 			if (key.equals(KeyConstants._COLUMNLIST)) return getColumnlist(getKeyCase(ThreadLocalPageContext.get()));
 		}
-		throw new DatabaseException("column [" + key + "] not found in query, columns are [" + getColumnlist(getKeyCase(ThreadLocalPageContext.get())) + "]", null, sql, null);
+		throw new DatabaseException("Column [" + key + "] not found in query", "available columns are [" + getColumnlist(getKeyCase(ThreadLocalPageContext.get()), ", ") + "]", sql,
+				null);
 	}
 
 	@Override
@@ -916,7 +1160,7 @@ public class QueryImpl implements Query, Objects, QueryResult {
 		for (int i = 0; i < columns.length; i++) {
 			columns[i].removeRow(row);
 		}
-		return --recordcount;
+		return recordcount.decrementAndGet();
 	}
 
 	@Override
@@ -927,7 +1171,7 @@ public class QueryImpl implements Query, Objects, QueryResult {
 			return removeRow(row);
 		}
 		catch (PageException e) {
-			return recordcount;
+			return getRecordcount();
 		}
 	}
 
@@ -943,10 +1187,10 @@ public class QueryImpl implements Query, Objects, QueryResult {
 		QueryColumn removed = removeColumnEL(key);
 		if (removed == null) {
 			if (key.equals(KeyConstants._RECORDCOUNT) || key.equals(KeyConstants._CURRENTROW) || key.equals(KeyConstants._COLUMNLIST))
-				throw new DatabaseException("can't remove " + key + " this is not a column",
-						"existing columns are [" + getColumnlist(getKeyCase(ThreadLocalPageContext.get())) + "]", null, null);
-			throw new DatabaseException("can't remove column [" + key + "], this column doesn't exist",
-					"existing columns are [" + getColumnlist(getKeyCase(ThreadLocalPageContext.get())) + "]", null, null);
+				throw new DatabaseException("Cannot remove [" + key + "], it is not a column",
+						"available columns are [" + getColumnlist(getKeyCase(ThreadLocalPageContext.get()), ", ") + "]", null, null);
+			throw new DatabaseException("Cannot remove column [" + key + "], it doesn't exist",
+					"available columns are [" + getColumnlist(getKeyCase(ThreadLocalPageContext.get()), ", ") + "]", null, null);
 		}
 		return removed;
 	}
@@ -1010,11 +1254,18 @@ public class QueryImpl implements Query, Objects, QueryResult {
 
 	@Override
 	public Object setAt(Collection.Key key, int row, Object value) throws PageException {
+		return setAt(key, row, value, false);
+	}
+
+	// Pass trustType=true to optimize operations such as QoQ where lots of values are being moved
+	// around between query objects but we know the types are already fine and don't need to
+	// redefine them every time
+	public Object setAt(Collection.Key key, int row, Object value, boolean trustType) throws PageException {
 		int index = getIndexFromKey(key);
 		if (index != -1) {
-			return columns[index].set(row, value);
+			return columns[index].set(row, value, trustType);
 		}
-		throw new DatabaseException("column [" + key + "] does not exist", "columns are [" + getColumnlist(getKeyCase(ThreadLocalPageContext.get())) + "]", sql, null);
+		throw new DatabaseException("Column [" + key + "] does not exist", "columns are [" + getColumnlist(getKeyCase(ThreadLocalPageContext.get()), ", ") + "]", sql, null);
 	}
 
 	@Override
@@ -1038,7 +1289,7 @@ public class QueryImpl implements Query, Objects, QueryResult {
 
 	@Override
 	public boolean next(int pid) {
-		if (recordcount >= (currRow.put(pid, currRow.getOrDefault(pid, 0) + 1))) {
+		if (getRecordcount() >= (currRow.put(pid, currRow.getOrDefault(pid, 0) + 1))) {
 			return true;
 		}
 		currRow.put(pid, 0);
@@ -1058,6 +1309,10 @@ public class QueryImpl implements Query, Objects, QueryResult {
 
 	@Override
 	public int getRecordcount() {
+		return recordcount.get();
+	}
+
+	protected AtomicInteger getRecordcountObj() {
 		return recordcount;
 	}
 
@@ -1073,16 +1328,21 @@ public class QueryImpl implements Query, Objects, QueryResult {
 
 	/**
 	 * return a string list of all columns
-	 * 
+	 *
 	 * @return string list
 	 */
+
 	public String getColumnlist(boolean upperCase) {
+		return getColumnlist(upperCase, ",");
+	}
+
+	public String getColumnlist(boolean upperCase, String delim) {
 		StringBuilder sb = new StringBuilder();
 		for (int i = 0; i < columnNames.length; i++) {
-			if (i > 0) sb.append(',');
-			sb.append(upperCase ? columnNames[i].getUpperString() : columnNames[i].getString());
+			if (i > 0) sb.append(delim);
+			sb.append(columnNames[i].getString());
 		}
-		return sb.toString();
+		return (upperCase ? sb.toString().toUpperCase() : sb.toString());
 	}
 	/*
 	 * public String getColumnlist() { return getColumnlist(true); }
@@ -1094,7 +1354,7 @@ public class QueryImpl implements Query, Objects, QueryResult {
 
 	@Override
 	public boolean go(int index, int pid) {
-		if (index > 0 && index <= recordcount) {
+		if (index > 0 && index <= getRecordcount()) {
 			currRow.put(pid, index);
 			return true;
 		}
@@ -1104,7 +1364,7 @@ public class QueryImpl implements Query, Objects, QueryResult {
 
 	@Override
 	public boolean isEmpty() {
-		return recordcount + columncount == 0;
+		return getRecordcount() + columncount == 0;
 	}
 
 	@Override
@@ -1114,7 +1374,7 @@ public class QueryImpl implements Query, Objects, QueryResult {
 
 	/**
 	 * sorts a query by a column
-	 * 
+	 *
 	 * @param column colun to sort
 	 * @throws PageException
 	 */
@@ -1130,7 +1390,7 @@ public class QueryImpl implements Query, Objects, QueryResult {
 
 	/**
 	 * sorts a query by a column
-	 * 
+	 *
 	 * @param strColumn column to sort
 	 * @param order sort type (Query.ORDER_ASC or Query.ORDER_DESC)
 	 * @throws PageException
@@ -1148,7 +1408,7 @@ public class QueryImpl implements Query, Objects, QueryResult {
 	}
 
 	public void sort(int[] rows) throws PageException {
-		if (rows.length != getRecordcount()) throw new ApplicationException("row count is invalid");
+		if (rows.length != getRecordcount()) throw new ApplicationException("Query Sort row count is invalid, [" + rows.length + "] is not [" + getRecordcount() + "]");
 		for (int i = 0; i < columns.length; i++) {
 			columns[i].sort(rows);
 		}
@@ -1162,7 +1422,7 @@ public class QueryImpl implements Query, Objects, QueryResult {
 		Arrays.sort(arr, (type == Types.BIGINT || type == Types.BIT || type == Types.INTEGER || type == Types.SMALLINT || type == Types.TINYINT || type == Types.DECIMAL
 				|| type == Types.DOUBLE || type == Types.NUMERIC || type == Types.REAL) ?
 
-						(Comparator) new NumberSortRegisterComparator(order == ORDER_ASC) : (Comparator) new SortRegisterComparator(null, order == ORDER_ASC, true, true));
+						(Comparator) new NumberSortRegisterComparator(order == ORDER_ASC) : (Comparator) new SortRegisterComparator(null, order == ORDER_ASC, false, false));
 
 		for (int i = 0; i < columns.length; i++) {
 			column = columns[i];
@@ -1176,15 +1436,22 @@ public class QueryImpl implements Query, Objects, QueryResult {
 	}
 
 	@Override
-	public synchronized boolean addRow(int count) {
-		// disconnectCache();
+	public boolean addRow(int count) {
+		addRowAndGet(count);
+		return true;
+	}
 
+	@Override
+	public int addRow() {
+		return addRowAndGet(1);
+	}
+
+	public int addRowAndGet(int count) {
 		for (int i = 0; i < columns.length; i++) {
 			QueryColumnPro column = columns[i];
 			column.addRow(count);
 		}
-		recordcount += count;
-		return true;
+		return recordcount.addAndGet(count);
 	}
 
 	@Override
@@ -1206,11 +1473,13 @@ public class QueryImpl implements Query, Objects, QueryResult {
 	public boolean addColumn(Collection.Key columnName, Array content, int type) throws DatabaseException {
 		// disconnectCache();
 		// TODO Meta type
-		content = (Array) Duplicator.duplicate(content, false);
+		if (content == null) content = new ArrayImpl();
+		else content = (Array) Duplicator.duplicate(content, false);
 
-		if (getIndexFromKey(columnName) != -1) throw new DatabaseException("column name [" + columnName.getString() + "] already exist", null, sql, null);
+		if (getIndexFromKey(columnName) != -1) throw new DatabaseException("Column name [" + columnName.getString() + "] already exists", null, sql, null);
 		if (content.size() != getRecordcount()) {
-			// throw new DatabaseException("array for the new column has not the same size like the query
+			// throw new DatabaseException("array for the new column has not the same size like the
+			// query
 			// (arrayLen!=query.recordcount)");
 			if (content.size() > getRecordcount()) addRow(content.size() - getRecordcount());
 			else content.setEL(getRecordcount(), "");
@@ -1284,8 +1553,8 @@ public class QueryImpl implements Query, Objects, QueryResult {
 			if (key.equals(KeyConstants._CURRENTROW)) return new QueryColumnRef(this, key, Types.INTEGER);
 			if (key.equals(KeyConstants._COLUMNLIST)) return new QueryColumnRef(this, key, Types.INTEGER);
 		}
-		throw new DatabaseException("key [" + key.getString() + "] not found in query, columns are [" + getColumnlist(getKeyCase(ThreadLocalPageContext.get())) + "]", null, sql,
-				null);
+		throw new DatabaseException("Column [" + key.getString() + "] not found in query, Columns are [" + getColumnlist(getKeyCase(ThreadLocalPageContext.get()), ", ") + "]",
+				null, sql, null);
 	}
 
 	private void renameEL(Collection.Key src, Collection.Key trg) {
@@ -1299,7 +1568,9 @@ public class QueryImpl implements Query, Objects, QueryResult {
 	@Override
 	public synchronized void rename(Collection.Key columnName, Collection.Key newColumnName) throws ExpressionException {
 		int index = getIndexFromKey(columnName);
-		if (index == -1) throw new ExpressionException("invalid column name definitions");
+		if (index == -1) {
+			throw new ExpressionException("Cannot rename Column [" + columnName.getString() + "] to [" + newColumnName.getString() + "], original column doesn't exist");
+		}
 		columnNames[index] = newColumnName;
 		columns[index].setKey(newColumnName);
 	}
@@ -1354,7 +1625,7 @@ public class QueryImpl implements Query, Objects, QueryResult {
 		sb.append(trenner.replace('-', '='));
 
 		// body
-		for (int i = 0; i < recordcount; i++) {
+		for (int i = 0; i < getRecordcount(); i++) {
 			for (int y = 0; y < keys.length; y++) {
 				try {
 					Object o = getAt(keys[y], i + 1);
@@ -1497,7 +1768,7 @@ public class QueryImpl implements Query, Objects, QueryResult {
 				QueryColumn column = columns[i];
 				column.cutRowsTo(maxrows);
 			}
-			recordcount = maxrows;
+			recordcount.set(maxrows);
 			return true;
 		}
 		return false;
@@ -1521,12 +1792,6 @@ public class QueryImpl implements Query, Objects, QueryResult {
 	@Override
 	public boolean isCached() {
 		return cacheType != null;
-	}
-
-	@Override
-	public int addRow() {
-		addRow(1);
-		return getRecordcount();
 	}
 
 	public Key getColumnName(int columnIndex) {
@@ -1827,20 +2092,20 @@ public class QueryImpl implements Query, Objects, QueryResult {
 
 	@Override
 	public boolean absolute(int row) throws SQLException {
-		if (recordcount == 0) {
+		if (getRecordcount() == 0) {
 			if (row != 0) throw new SQLException("invalid row [" + row + "], query is Empty");
 			return false;
 		}
 		// row=row%recordcount;
 
 		if (row > 0) currRow.put(getPid(), row);
-		else currRow.put(getPid(), (recordcount + 1) + row);
+		else currRow.put(getPid(), (getRecordcount() + 1) + row);
 		return true;
 	}
 
 	@Override
 	public void afterLast() throws SQLException {
-		currRow.put(getPid(), recordcount + 1);
+		currRow.put(getPid(), getRecordcount() + 1);
 	}
 
 	@Override
@@ -1911,22 +2176,22 @@ public class QueryImpl implements Query, Objects, QueryResult {
 
 	@Override
 	public BigDecimal getBigDecimal(int columnIndex) throws SQLException {
-		return new BigDecimal(getDouble(columnIndex));
+		return Caster.toBigDecimal(getDouble(columnIndex));
 	}
 
 	@Override
 	public BigDecimal getBigDecimal(String columnName) throws SQLException {
-		return new BigDecimal(getDouble(columnName));
+		return Caster.toBigDecimal(getDouble(columnName));
 	}
 
 	@Override
 	public BigDecimal getBigDecimal(int columnIndex, int scale) throws SQLException {
-		return new BigDecimal(getDouble(columnIndex));
+		return Caster.toBigDecimal(getDouble(columnIndex));
 	}
 
 	@Override
 	public BigDecimal getBigDecimal(String columnName, int scale) throws SQLException {
-		return new BigDecimal(getDouble(columnName));
+		return Caster.toBigDecimal(getDouble(columnName));
 	}
 
 	@Override
@@ -2388,7 +2653,7 @@ public class QueryImpl implements Query, Objects, QueryResult {
 
 	@Override
 	public boolean isAfterLast() throws SQLException {
-		return getCurrentrow(ThreadLocalPageContext.get().getId()) > recordcount;
+		return getCurrentrow(ThreadLocalPageContext.get().getId()) > getRecordcount();
 	}
 
 	@Override
@@ -2403,12 +2668,12 @@ public class QueryImpl implements Query, Objects, QueryResult {
 
 	@Override
 	public boolean isLast() throws SQLException {
-		return currRow.getOrDefault(getPid(), 0) == recordcount;
+		return currRow.getOrDefault(getPid(), 0) == getRecordcount();
 	}
 
 	@Override
 	public boolean last() throws SQLException {
-		return absolute(recordcount);
+		return absolute(getRecordcount());
 	}
 
 	@Override
@@ -2553,12 +2818,12 @@ public class QueryImpl implements Query, Objects, QueryResult {
 
 	@Override
 	public void updateByte(int columnIndex, byte x) throws SQLException {
-		updateObject(columnIndex, new Byte(x));
+		updateObject(columnIndex, Byte.valueOf(x));
 	}
 
 	@Override
 	public void updateByte(String columnName, byte x) throws SQLException {
-		updateObject(columnName, new Byte(x));
+		updateObject(columnName, Byte.valueOf(x));
 	}
 
 	@Override
@@ -2757,8 +3022,12 @@ public class QueryImpl implements Query, Objects, QueryResult {
 	}
 
 	@Override
-	public ResultSetMetaData getMetaData() throws SQLException {
-		throw new SQLException("method is not implemented");
+	public ResultSetMetaData getMetaData() {
+		return this.metadata;
+	}
+
+	private void setMetaData(ResultSetMetaData metadata) {
+		this.metadata = metadata;
 	}
 
 	@Override
@@ -2794,6 +3063,7 @@ public class QueryImpl implements Query, Objects, QueryResult {
 			this.name = other.name;
 			this.recordcount = other.recordcount;
 			this.sql = other.sql;
+			this.metadata = other.metadata;
 			this.updateCount = other.updateCount;
 
 		}
@@ -3100,14 +3370,21 @@ public class QueryImpl implements Query, Objects, QueryResult {
 			}
 			newResult.currRow = new ConcurrentHashMap<Integer, Integer>();
 			newResult.sql = qry.getSql();
+			try {
+				newResult.metadata = qry.getMetaData();
+			}
+			catch (SQLException e) {
+				// Do nothing on exception, falls back to null
+			}
 			if (qry instanceof QueryImpl) newResult.templateLine = ((QueryImpl) qry).getTemplateLine();
 			else newResult.templateLine = new TemplateLine(qry.getTemplate(), 0);
-			newResult.recordcount = qry.getRecordcount();
+			newResult.recordcount = new AtomicInteger(((QueryImpl) qry).recordcount.intValue());
 			newResult.columncount = newResult.columnNames.length;
 			newResult.cacheType = qry.getCacheType();
 			newResult.name = qry.getName();
 			newResult.exeTime = qry.getExecutionTime();
 			newResult.updateCount = qry.getUpdateCount();
+			if (qry instanceof QueryImpl) newResult.datasourceName = ((QueryImpl) qry).getDatasourceName();
 			if (qry.getGeneratedKeys() != null) cloneQuery(newResult.generatedKeys = ((QueryImpl) qry.getGeneratedKeys()), false);
 			return newResult;
 		}
@@ -3128,7 +3405,9 @@ public class QueryImpl implements Query, Objects, QueryResult {
 	}
 
 	public void disableIndex() {
-		this.indexes = null;
-		this.indexName = null;
+		if (!populating) {
+			this.indexes = null;
+			this.indexName = null;
+		}
 	}
 }
