@@ -28,6 +28,8 @@ import lucee.commons.lang.ClassUtil;
 import lucee.commons.lang.ExceptionUtil;
 import lucee.commons.lang.StringUtil;
 import lucee.runtime.PageContext;
+import lucee.runtime.config.ConfigPro;
+import lucee.runtime.config.ConfigWebUtil;
 import lucee.runtime.engine.ThreadLocalPageContext;
 import lucee.runtime.exp.ExpressionException;
 import lucee.runtime.exp.PageException;
@@ -49,33 +51,34 @@ public final class ServerImpl extends ScopeSupport implements Server, SharedScop
 
 	private static final DateTimeImpl expired = new DateTimeImpl(2145913200000L, false);
 
-	private static final Key PRODUCT_NAME = KeyImpl.intern("productname");
-	private static final Key PRODUCT_LEVEL = KeyImpl.intern("productlevel");
-	private static final Key PRODUCT_VERSION = KeyImpl.intern("productversion");
-	private static final Key SERIAL_NUMBER = KeyImpl.intern("serialnumber");
-	private static final Key EXPIRATION = KeyImpl.intern("expiration");
-	private static final Key INSTALL_KIT = KeyImpl.intern("installkit");
-	private static final Key ROOT_DIR = KeyImpl.intern("rootdir");
-	private static final Key SUPPORTED_LOCALES = KeyImpl.intern("supportedlocales");
-	private static final Key ARCH = KeyImpl.intern("arch");
-	private static final Key MAC_ADDRESS = KeyImpl.intern("macAddress");
-	private static final Key ARCH_MODEL = KeyImpl.intern("archModel");
-	// private static final Key JAVA_AGENT_PATH = KeyImpl.intern("javaAgentPath");
-	private static final Key JAVA_EXECUTION_PATH = KeyImpl.intern("executionPath");
-	private static final Key JAVA_AGENT_SUPPORTED = KeyImpl.intern("javaAgentSupported");
-	private static final Key LOADER_VERSION = KeyImpl.intern("loaderVersion");
-	private static final Key LOADER_PATH = KeyImpl.intern("loaderPath");
-	private static final Key ADDITIONAL_INFORMATION = KeyImpl.intern("additionalinformation");
-	private static final Key BUILD_NUMBER = KeyImpl.intern("buildnumber");
-	private static final Key RELEASE_DATE = KeyImpl.intern("release-date");
-	private static final Key VENDOR = KeyImpl.intern("vendor");
-	private static final Key FREE_MEMORY = KeyImpl.intern("freeMemory");
-	private static final Key MAX_MEMORY = KeyImpl.intern("maxMemory");
-	private static final Key TOTAL_MEMORY = KeyImpl.intern("totalMemory");
-	private static final Key VERSION_NAME = KeyImpl.intern("versionName");
-	private static final Key VERSION_NAME_EXPLANATION = KeyImpl.intern("versionNameExplanation");
-	private static final Key HOST_NAME = KeyImpl.intern("hostname");
+	private static final Key PRODUCT_NAME = KeyConstants._productname;
+	private static final Key PRODUCT_LEVEL = KeyConstants._productlevel;
+	private static final Key PRODUCT_VERSION = KeyConstants._productversion;
+	private static final Key SERIAL_NUMBER = KeyConstants._serialnumber;
+	private static final Key EXPIRATION = KeyConstants._expiration;
+	private static final Key INSTALL_KIT = KeyConstants._installkit;
+	private static final Key ROOT_DIR = KeyConstants._rootdir;
+	private static final Key SUPPORTED_LOCALES = KeyConstants._supportedlocales;
+	private static final Key ARCH = KeyConstants._arch;
+	private static final Key MAC_ADDRESS = KeyConstants._macAddress;
+	private static final Key ARCH_MODEL = KeyConstants._archModel;
+	// private static final Key JAVA_AGENT_PATH = KeyConstants._javaAgentPath;
+	private static final Key JAVA_EXECUTION_PATH = KeyConstants._executionPath;
+	private static final Key JAVA_AGENT_SUPPORTED = KeyConstants._javaAgentSupported;
+	private static final Key LOADER_VERSION = KeyConstants._loaderVersion;
+	private static final Key LOADER_PATH = KeyConstants._loaderPath;
+	private static final Key ADDITIONAL_INFORMATION = KeyConstants._additionalinformation;
+	private static final Key BUILD_NUMBER = KeyConstants._buildnumber;
+	private static final Key RELEASE_DATE = KeyImpl.getInstance("release-date");
+	private static final Key VENDOR = KeyConstants._vendor;
+	private static final Key FREE_MEMORY = KeyConstants._freeMemory;
+	private static final Key MAX_MEMORY = KeyConstants._maxMemory;
+	private static final Key TOTAL_MEMORY = KeyConstants._totalMemory;
+	private static final Key VERSION_NAME = KeyConstants._versionName;
+	private static final Key VERSION_NAME_EXPLANATION = KeyConstants._versionNameExplanation;
+	private static final Key HOST_NAME = KeyConstants._hostname;
 	private static final Key ENVIRONMENT = KeyConstants._environment;
+	private static final Key ADMIN_MODE = KeyConstants._singleContext;
 
 	private static String jep;
 
@@ -140,7 +143,7 @@ public final class ServerImpl extends ScopeSupport implements Server, SharedScop
 		os.setEL(ARCH, System.getProperty("os.arch"));
 		os.setEL(MAC_ADDRESS, SystemUtil.getMacAddressAsWrap());
 		int arch = SystemUtil.getOSArch();
-		if (arch != SystemUtil.ARCH_UNKNOW) os.setEL(ARCH_MODEL, new Double(arch));
+		if (arch != SystemUtil.ARCH_UNKNOW) os.setEL(ARCH_MODEL, Double.valueOf(arch));
 		os.setEL(KeyConstants._version, System.getProperty("os.version"));
 		os.setEL(ADDITIONAL_INFORMATION, "");
 		os.setEL(BUILD_NUMBER, "");
@@ -159,6 +162,9 @@ public final class ServerImpl extends ScopeSupport implements Server, SharedScop
 		lucee.setEL(LOADER_PATH, ClassUtil.getSourcePathForClass("lucee.loader.servlet.CFMLServlet", ""));
 		lucee.setEL(ENVIRONMENT, jsr223 != null && jsr223.booleanValue() ? "jsr223" : "servlet");
 
+		// singleContext admin Mode
+		lucee.setEL(ADMIN_MODE, ConfigWebUtil.toAdminMode(((ConfigPro) pc.getConfig()).getAdminMode(), "single") == "single");
+
 		lucee.setReadOnly(true);
 		super.setEL(KeyConstants._lucee, lucee);
 
@@ -173,11 +179,11 @@ public final class ServerImpl extends ScopeSupport implements Server, SharedScop
 		java.setEL(KeyConstants._version, System.getProperty("java.version"));
 		java.setEL(VENDOR, System.getProperty("java.vendor"));
 		arch = SystemUtil.getJREArch();
-		if (arch != SystemUtil.ARCH_UNKNOW) java.setEL(ARCH_MODEL, new Double(arch));
+		if (arch != SystemUtil.ARCH_UNKNOW) java.setEL(ARCH_MODEL, Double.valueOf(arch));
 		Runtime rt = Runtime.getRuntime();
-		java.setEL(FREE_MEMORY, new Double(rt.freeMemory()));
-		java.setEL(TOTAL_MEMORY, new Double(rt.totalMemory()));
-		java.setEL(MAX_MEMORY, new Double(rt.maxMemory()));
+		java.setEL(FREE_MEMORY, Double.valueOf(rt.freeMemory()));
+		java.setEL(TOTAL_MEMORY, Double.valueOf(rt.totalMemory()));
+		java.setEL(MAX_MEMORY, Double.valueOf(rt.maxMemory()));
 		java.setEL(JAVA_AGENT_SUPPORTED, Boolean.TRUE);
 
 		if (jep == null) {
